--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -1,45 +1,1 @@
-*, *:before, :after{margin: 0; padding: 0; box-sizing: border-box; -webkit-box-sizing: border-box;}
-body{margin-top: -20px;}
-@media (max-width: 767.9px){
-    body{margin-top:-50px;}
-    .areaLogin{
-        height: 100px;
-        width: 250px;
-        margin-bottom: 300px;
-    }
-    .areaBody{
-        text-align: center;
-        margin-top: 140px;
-        height: 100px;
-        width: 250px;
-    }
-    .col-4{
-        max-width: 90%;
-        font-size: 15px;
-    }
-    .col-8{
-        max-width: 90%;
-        font-size: 15px;
-    }
-    .navbar{
-        max-width: 100%;
-        margin-top: -10px;
-        padding: 15px;
-    }
-    .areaNlogin{
-        display: none;
-    }
-    .opcoes{
-        font-size: 15px;
-        max-width: 100%
-    }
-    #linhaGreen{
-        max-width: 100%;
-    }
-    #buttonADM{
-        display: none;
-    }
-    .copy{
-        margin-top: 600px;
-    }
-}
+/*Este Css é usado para adicionar as div input escondidas no formulário
